# creativetoolbox

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: pages.yml
creative-handler/: toolbox-demo-builder.skill
demos/dri-oncall-agent/: BLOG.md  README.md  agent-instructions.md  demo-script.md  toolbox-tools.json
demos/dri-oncall-agent/routines/: incident-follow-up-30m.yaml  postmortem-draft-24h.yaml  weekday-readiness-scan.yaml  weekly-learning-loop.yaml
demos/mars-greenhouse-ops/: .env.example  BLOG-CLOUD.md  BLOG.md  Makefile  README.md
demos/mars-greenhouse-ops/cloud/: .env.example  (+3 more)
demos/pixel-jam-studio/: .gitignore  BLOG.md  Makefile  README.md
demos/pixel-jam-studio/python/: activity.py  main.py  pyproject.toml  scenario.py
demos/pizza-shop-ops/: .dockerignore  .env.example  BLOG-CLOUD.md  BLOG.md  Makefile  README.md
demos/space-mission-control/: .env.example  BLOG.md  Makefile  README.md
demos/space-mission-control/python/: main.py  pyproject.toml  scenario.py  toolbox_setup.py
demos/squad-room/: .env.example  BLOG-CLOUD.md  BLOG.md  Makefile  README.md  demo.tape
demos/squad-room/python/: activity.py  main.py  pyproject.toml  scenario.py  toolbox_setup.py
toolbox.io/: build_cloud_posts.py  build_dri_post.py  build_shape_art.py  demos.json  index.html
toolbox.io/assets/: svg-figure.js
toolbox.io/blog/: dri-oncall-agent.html  mars-greenhouse-ops-cloud.html  mars-greenhouse-ops.html  pixel-jam-studio.html  pizza-shop-ops-cloud.html  pizza-shop-ops.html  space-mission-control.html  squad-room-cloud.html  squad-room.html
(+114 files in other folders)
