[project]
name = "squad-room-demo"
version = "0.1.0"
description = "The Squad Room — a toolbox-demo-builder demo (Python)"
requires-python = ">=3.10"
# Scripted mock mode needs NOTHING beyond the stdlib. The extras are only for --live / --real.
dependencies = []

[project.optional-dependencies]
live = ["agent-framework", "httpx", "azure-identity"]
real = ["azure-ai-projects", "azure-identity", "mcp"]

[tool.uv]
package = false
